some annotations for NP safety